lorem IPSUM DOLOR

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         </div>
         <div class="history">
         <h1>Qual anime você deseja assistir?</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab minus fugiat tenetur quasi excepturi! Quia amet, eos consequuntur dolorum expedita molestias voluptas nihil asperiores illum rem nam. Commodi, debitis veritatis.</p>
         </div>
         <div class="animes">
             <div class="card">
