--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     <div class="footer">
         <footer> ® <a href="#">Gabriel Andrade</a> e <a href="https://diegopinho.com.br/" target="_blank">Diego
                 Pinho</a>. Todos os direitos reservados.</footer>
+                <footer> bom dia.</footer>
     </div>
 </body>
 
