--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <div class="links">
                 <nav>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Animes Dublados</a></li>
-                        <li><a href="#">Animes Legendados</a></li>
-                        <li class="submenu"><a href="#">Categorias <i class="bi bi-caret-down-fill"></i></a>
+                        <li><a href="#" class="font">Home</a></li>
+                        <li><a href="#" class="font">Animes Dublados</a></li>
+                        <li><a href="#" class="font">Animes Legendados</a></li>
+                        <li class="submenu"><a href="#" class="font">Categorias <i class="bi bi-caret-down-fill"></i></a>
                             <div class="drop">
                                 <a href="#">Shonen</a>
                                 <a href="#">Shoujo</a>
@@ -45,11 +45,12 @@
             </div>
         </section>
     </header>
-    <div class="scale">
-        <div class="pesquisa"> 
+    <div class="anicards">
+        <div> 
         <input type="search" name="q" id="Digite o nome do seu anime aqui" placeholder="Buscar...">
         <button id="procurar"><i class="bi bi-search"></i></button>
         </div>
+        <div class="txtanimes">
         <div class="history">
         <h1>Qual anime você deseja assistir?</h1>
         </div>
@@ -68,6 +69,7 @@
                 <a href="https://www.netflix.com/search?q=one%20punch%20man&jbv=80117291" target="blank"><img
                         src="one punch man.jpg" alt="One Punch Man"></a>
                 <button>Assistir agora</button>
+                </div>
             </div>
         </div>
     </div>
